# obol-desktop

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: index.html
docs/updates/: README.md  latest.json
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  poll.rs
src/lib/: api.ts  formatters.ts  types.ts
src/lib/components/: Dashboard.svelte  ErrorBanner.svelte  Logo.svelte  MiniSparkline.svelte  MoodMeter.svelte  ProxyFeed.svelte  SettingsPage.svelte  SetupScreen.svelte  StatCard.svelte
src/lib/stores/: theme.ts  token.ts  widget.ts
video/: package-lock.json  package.json  tsconfig.json
video/src/: LaunchVideo.tsx  Root.tsx  fonts.ts  tokens.ts
video/src/components/: Widget.tsx
video/src/scenes/: CTA.tsx  Features.tsx  HowItWorks.tsx  Intro.tsx  TechStrip.tsx  WidgetDemo.tsx
