[package]
name = "obol-desktop"
version = "0.1.0"
description = "Obol desktop widget"
authors = ["bravo1goingdark"]
edition = "2021"

[[bin]]
name = "obol-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tokio = { version = "1", features = ["rt", "macros", "time", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native-sync-persistent"] }
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"

[profile.release]
# Optimise for size. On macOS/Windows the webview is by far the biggest
# chunk of the bundle — shrinking Rust from ~15 MB to ~5 MB is the only
# lever that actually moves the needle.
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
